# sap-to-ai-bridge

./: .gitignore  Cargo.toml  LICENSE  README.md  benchmark.sh
src/: .gdb_history  cli.rs  db.rs  debug.rs  embeddings.rs  ingest.rs  llm.rs  main.rs  models.rs  tests.rs
