[package]
name = "sap-to-ai-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = "0.8.0"
candle-nn = "0.8.0"
candle-transformers = "0.8.0"
ureq = { version = "2.9", features = ["tls"] }
tokenizers = { version = "0.19.1", default-features = false, features = ["unstable_wasm"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0.150"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
clap = { version = "4.6.1", features = ["derive"] }
lancedb = "0.15.0"
arrow-array = "53.0"
arrow-schema = "53.0"
futures = "0.3.32"
datafusion = "38.0.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
